--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<title>Unblocked Games — Play Anywhere</title>
+	<title>Jeoweb</title>
 	<link rel="stylesheet" href="styles.css" />
 </head>
 <body class="theme-dark">
